--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -82,7 +82,7 @@
                 Command="{Binding AddAppointmentCommand}"
                 Margin="0,5,0,0"
                 Visibility="{Binding IsEnded, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                Новый осмотр</Button>
+                Повторный осмотр</Button>
         </StackPanel>
     </Grid>
 </UserControl>
