--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -4,24 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
-             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-             xmlns:dat="clr-namespace:System.Windows.Data;assembly=PresentationFramework"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              x:Name="appointment">
-    <UserControl.Resources>
-        <CollectionViewSource Source="{Binding HealthRecords}" x:Key="hrs">
-            <CollectionViewSource.SortDescriptions>
-                <scm:SortDescription PropertyName="Category" />
-                <scm:SortDescription PropertyName="SortingDate" />
-            </CollectionViewSource.SortDescriptions>
-            <CollectionViewSource.GroupDescriptions>
-                <dat:PropertyGroupDescription PropertyName="Category" />
-            </CollectionViewSource.GroupDescriptions>
-        </CollectionViewSource>
-        
-    </UserControl.Resources>
-    
+
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Control" Key="N" Command="{Binding AddHealthRecordCommand}" />
     </UserControl.InputBindings>
@@ -41,10 +27,11 @@
                 </Grid.RowDefinitions>
 
                 <ListView x:Name="records"
-                  ItemsSource="{Binding Source={StaticResource hrs}}"
+                  ItemsSource="{Binding HealthRecordsView}"
                   SelectedItem="{Binding SelectedHealthRecord}"
                   Style="{StaticResource list}"
-                  HorizontalContentAlignment="Stretch">
+                  HorizontalContentAlignment="Stretch" 
+                          SelectionMode="Single">
                     <ListView.GroupStyle>
                         <GroupStyle>
                             <GroupStyle.ContainerStyle>
@@ -54,7 +41,7 @@
                                             <ControlTemplate>
                                                 <StackPanel>
                                                     <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold"></TextBlock>
-                                                    <Separator/>
+                                                    <Separator />
                                                     <ItemsPresenter />
                                                 </StackPanel>
                                             </ControlTemplate>
@@ -73,7 +60,7 @@
 
                     <ListView.ItemContainerStyle>
                         <Style TargetType="{x:Type ListViewItem}">
-                            <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+                            <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                         </Style>
                     </ListView.ItemContainerStyle>
                 </ListView>
