--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -5,11 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" Width="200">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="36" />
-            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -17,20 +16,20 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
             <TextBlock Style="{StaticResource ScreenTitle}">Пациенты</TextBlock>
             <Button Content="Новый"
                     Grid.Column="1"
-                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
                     Command="{Binding AddPatientCommand}"
-                    Margin="50,10,0,6" />
+                    Margin="0,10,0,6" />
         </Grid>
 
         <controls:FloatSearch x:Name="search"
                               DataContext="{Binding Search}"
-                              Grid.Row="2">
+                              Grid.Row="1">
             <controls:FloatSearch.InputBindings>
                 <KeyBinding Key="Escape" Command="{Binding ToggleSearchCommand}"></KeyBinding>
                 <KeyBinding Key="Enter" Command="{Binding SelectCommand}"></KeyBinding>
@@ -41,7 +40,7 @@
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding CurrentPatient}"
                   Style="{StaticResource list}"
-                  Grid.Row="3" 
+                  Grid.Row="2" 
                   Margin="0,5,0,0" 
                   HorizontalContentAlignment="Stretch">
             <ListView.ItemTemplate>
